fixed z-index of sticky messages

--- a/mod-picker/app/assets/stylesheets/components/messages.scss
+++ b/mod-picker/app/assets/stylesheets/components/messages.scss
@@ -64,6 +64,7 @@
 
   &.sticky {
     position: fixed;
+    z-index: 3000;
     width: 100%;
     top: 0;
     left: 0;
